--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gulp-changelog",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Gulp task to create and edit changelog",
-  "main": "index.js",
+  "main": "/src/index.js",
   "scripts": {
     "postinstall": "cat ../../CHANGELOG.md || echo \"# Changelog\" > ../../CHANGELOG.md"
   },
@@ -18,6 +18,6 @@
     "through2": "^2.0.1"
   },
   "files": [
-    "./src/index.js"
+    "/src/index.js"
   ]
 }
